<?xml version="1.0"?>
<package format="3">
  <name>uniubi_interface_test</name>
  <version>0.1.0</version>
  <description>Simple build and runtime smoke test for the Uniubi ROS 2 interfaces.</description>
  <maintainer email="support@uniubi.com">Uniubi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>uniubi</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
